# Tosurnament

./: .dockerignore  .env  .env.development  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.auth  Dockerfile.bot  Dockerfile.dashboard  LICENSE  README.md  client.py  compose.yml  configuration.yaml  constants.json  db.Dockerfile  docker-compose.yaml  docker-compose.yml  init_mysql.sh  main.py  mysql_wrapper.py  production.yml  requirements.txt  selfbotclient.py  setup.sh  strings.json  testing.yml  tosurnament.sh  web-server.Dockerfile
.github/workflows/: audit.yml  checks.yml  coverage.yml  general.yml  tests.yml
.sqlx/: query-89b204f5719275a0ee899511d114dfd6636dbf829c13d1c4a867da0199e38246.json  query-eadf14fe2912fa689785a4470831b4b6acf97d40433b53771498af3b2f4a1f47.json  query-f3001f4e0c82679948fbd3e96e10463030b0f4806010b897ab05a8917edab158.json  query-f9a9a438bc9c0c8a86e5acd3c6b2c009a50732f28059db6c6bb227a2eca87dd7.json
api/: challonge.py  osu.py  spreadsheet.py
backend/: .coveragerc  file.tmp  migrate_db.py  pytest.ini  start_api.py  start_bot.py  start_server.py  test.py
backend/api/: start.py  utils.py
backend/api/globals/: __init__.py
backend/bot/: client.py
backend/bot/modules/: admin.py  auth.py  guild.py  module.py  owner.py  reaction_for_role_message.py
backend/bot/replies/: auth.json  guild.json  module.json  reaction_for_role_message.json
backend/common/: config.py  exceptions.py
backend/common/api/: challonge.py  osu.py  spreadsheet.py  tosurnament.py
backend/common/databases/: base_spreadsheet.py  bracket.py  end_tournament_message.py  guild.py  guild_verify_message.py  match_notification.py  players_spreadsheet.py  post_result_message.py  qualifiers_results_message.py  qualifiers_results_spreadsheet.py  qualifiers_spreadsheet.py  reaction_for_role_message.py  reschedule_message.py  schedules_spreadsheet.py  staff_reschedule_message.py  token.py  tournament.py  user.py
backend/common/utils/: load_json.py
backend/logs/: api.log.2022-06-07  api.log.2022-06-14  api.log.2022-07-26  api.log.2022-08-09  bot.log.2022-05-24  bot.log.2022-05-31  bot.log.2022-06-07  bot.log.2022-07-26  migrate_db.log.2022-05-24
backend/server/: endpoints.py  errors.py  handler.py
backend/server/api/: db.py  exceptions.py  logger.py  utils.py
backend/server/routes/: index.py
configuration/: base.yaml
crates/libs/config/: Cargo.toml
crates/libs/core/: Cargo.toml
crates/libs/core/migrations/: 20240307175731_create_tournament_table.down.sql  20240307175731_create_tournament_table.up.sql
crates/libs/core/src/: context.rs  lib.rs
crates/libs/core/src/domain/: mod.rs
crates/libs/core/src/domain/tournament/: acronym.rs  mod.rs  name.rs
crates/libs/secret-env/: Cargo.toml
crates/services/web-server/: Cargo.toml
crates/services/web-server/config/: local.yml
crates/services/web-server/src/: config.rs  context.rs  error.rs  lib.rs  main.rs  prelude.rs  startup.rs
crates/services/web-server/src/routes/: mod.rs  tournaments.rs
crates/services/web-server/tests/api/: helpers.rs  tournaments.rs
databases/: base.py  bracket.py  end_tournament_message.py  players_spreadsheet.py  referee_notification.py  reschedule_message.py  schedules_spreadsheet.py  staff_reschedule_message.py  tournament.py  user.py
frontend/auth/: .prettierrc  nuxt.config.js  package.json
frontend/auth/pages/: index.vue  redirect.vue
frontend/dashboard/: package.json
frontend/dashboard/api/: TosurnamentApi.js
frontend/dashboard/components/: ErrorPage.js  GuildCard.js  Header.js  Sidebar.js
frontend/dashboard/pages/: _app.js  index.js  (+4 more)
frontend/fields/: README.md  package.json
frontend/fields_test/: package.json  rollup.config.js
frontend/web/: package.json
helpers/: bitfield.py  class_readonly.py  crypt.py  load_json.py  parser.py
migrations/: 20240215193936_create_tournaments_table.sql
modules/: admin.py  module.py  osu.py  tosurnament.py
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  secret_env.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  tournament.rs  tournament_acronym.rs  tournament_name.rs
src/routes/: health_check.rs  mod.rs  tournaments.rs
tests/: health_check.rs  integration.rs
tests/api/: health_check.rs  helpers.rs  main.rs  tournaments.rs
(+246 files in other folders)
