[package]
name = "tosurnament-core"
version = "0.1.0"
authors = ["Spartan Plume <spartan.plume@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
lazy_static = "1.4"
nutype = { version = "0.4", features = ["regex", "serde"] }
nutype_macros = { version = "0.4", features = ["regex"] }
regex = "1.10"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "tls-rustls",
] }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
claims = "0.7"
proptest = "1.4"
